--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,21 @@
-  <aside class="bg-dark">
+<section class="bg-dark" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">Why Prism Nail Studio?</h2>
+                <hr class="light">
+                <p class="text-faded">Mission statement about prism nail studios. Goal is to curate a nail experience to match you</p>
+                
+            </div>
+        </div>
+    </div>
+</section>
+  
+  <!--<aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
+              <h2>Mission statement about prism nail studios. Goal is to curate a nail experience to match you</h2>
               <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
           </div>
       </div>
-  </aside>
+  </aside>-->
