--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #F05F40;
+$theme-primary: #9e91e0;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
