--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -229,42 +229,22 @@ header {
     display: block;
     max-width: 650px;
     margin: 0 auto;
-    opacity: 0.5;
     .portfolio-box-caption {
         color: white;
-        opacity: 0;
+        opacity: 0.5;
         display: block;
-        background: rgba( $theme-primary, .9 );
+        background: rgba( white, .9 );
         position: absolute;
         bottom: 0;
         text-align: center;
         width: 100%;
         height: 100%;
         @include transition-all;
-        .portfolio-box-caption-content {
-            width: 100%;
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            .project-category,
-            .project-name {
-                @include sans-serif-font;
-                padding: 0 15px;
-            }
-            .project-category {
-                text-transform: uppercase;
-                font-weight: 600;
-                font-size: 14px;
-            }
-            .project-name {
-                font-size: 18px;
-            }
         }
-    }
+    
     &:hover {
-        .portfolio-box {
-            opacity: 1;
+        .portfolio-box-caption {
+            opacity: 0;
         }
     }
     @media (min-width: 768px) {
