--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#gallery">Gallery</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#services">Services</a>
