--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,8 @@
   {% include nav.html %}
   {% include header.html %}
   {% include aside.html %}
-  {% include portfolio.html %}
+  {% include gallery.html%}
+  <!--{% include portfolio.html %}-->
   {% include services.html %}
   {% include call-to-action.html %}
   {% include contact.html %}
