changing theme color, updating content

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -4,14 +4,16 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Why Prism Nail Studio?</h2>
                 <hr class="light">
-                <p class="text-faded">Mission statement about prism nail studios. Goal is to curate a nail experience to match you</p>
-                
+                <p class="text-faded">Our purpose is to improve every life, by helping you bring your nail fantasies to
+                        life. With Monica’s love for people and her knowledge/experiences, her goal is to create a nail experience that best matches
+                        you by joining you on your journey to fantastic nails.</p>
+
             </div>
         </div>
     </div>
 </section>
-  
-  <!--<aside class="bg-dark">
+
+<!--<aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Mission statement about prism nail studios. Goal is to curate a nail experience to match you</h2>
