--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,8 +4,30 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About the Nail Tech</h2>
                 <hr class="light">
-                <p class="text-faded">A little blurb about monica, where she studied, why nails, other passions.</p>
-               <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
+                <p class="text-faded">Born and raised in Vancouver, Canada, Monica stands at a whopping 150cm. Her love of people
+                        developed through her experiences of working in the restaurant industry for more than 7 years. As a client
+                        herself, she always enjoyed getting her nails done. Like all human beings, she felt lost and distraught
+                        about where she wanted to go in life so she decided to merge the two: amazing nails and the human
+                        experience, by going to school in Japan to study the craft of Japanese nail art in Osaka.<br><br>
+                        Having studied the Japanese language since high school and having an interest in Japanese culture,
+                        moving to Japan was not a matter of “if” but “when”. The decision to study nails in Japan deemed the
+                        perfect opportunity to utilize all those skills learned in her previous years.<br><br>
+                        Monica believes that the perfect human experience starts by creating a healthy environment of safety for
+                        not only her clients, but her staff as well – whether they work directly with her, or they are simply
+                        delivering the paper outside. She believes in paying it forward by creating a circle of safety beyond our
+                        borders, regardless of status and/or rank.<br><br>
+                        Monica finds fulfillment in her work by creating a safe environment for everybody. Interacting with her
+                        clients and seeing their reactions throughout their journey - whether they are sitting with her at the nail
+                        table, or sitting at a table in the restaurants where she works at - brings her the utmost joy.<br><br>
+                        Work is such a huge aspect of life and she believes that feeling fulfilled at work is a human right and not a
+                        mere luxury. She wants to create a world where the majority of people wake up happy to go to work in
+                        the morning and come home feeling fulfilled by the work that they do. Through her work, she hopes to
+                        inspire you to pay it forward to create and maintain safe work environments so that you as well, can feel
+                        fulfilled by your work and inspire others that anything is possible when we feel like we belong, in any
+                        safe environment.<br><br>
+                        <i>“The journey to greatness begins the moment our deep desires for comfort and ease are overpowered by
+                        our own desires to connect and contribute.”</i> - Brendon Burchard</p>
+                <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a>-->
             </div>
         </div>
     </div>
