--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>monica needs to write something nice about contacting her here</p>
+                <p>Join me on the journey of nails and we can create something amazing, together!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-3 text-center">
             <a href="https://instagram.com/{{ site.instagram_username }}" target="_blank">
