--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">At Your Service</h2>
+                <p class="text-muted"><i>Nail art not incuded in the price.</i></p>
                 <hr class="primary">
             </div>
         </div>
@@ -12,31 +13,42 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>GEL MANICURE</h3>
+                    <p class="text-muted"><i>No Extension</i></p>
+                    <p class="text-muted">SOFT GEL - $40+</p>
+                    <p class="text-muted">HARD GEL - $45+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>FULL SET</h3>
+                    <p class="text-muted"><i>Including Sculpted Acrylic</i></p>
+                    <p class="text-muted">$60+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>FILL</h3>
+                    <p class="text-muted">Acrylic - $45+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>REMOVAL</h3>
+                    <p class="text-muted"><i>Soft Gel/Hard Gel/Acrylic</i></p>
+                    <p class="text-muted">$20+</p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center"><br><br>
+                    <p class="text-muted"><i>Pedicure Coming Soon...</i></p>
+                </div>
+            </div>
+        </div>
 </section>
