--- a/css/main.scss
+++ b/css/main.scss
@@ -34,8 +34,9 @@
 // }
 
 // variables.less
-$theme-primary: #ffd9f9;
+$theme-primary: #FF69B4;//#ffd9f9;
 $theme-dark: #222;
+
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
