--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-paint-brush wow bounceIn text-primary" ></i>
                     <h3>GEL MANICURE</h3>
                     <p class="text-muted"><i>No Extension</i></p>
                     <p class="text-muted">SOFT GEL - $40+</p>
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>FULL SET</h3>
                     <p class="text-muted"><i>Including Sculpted Acrylic</i></p>
                     <p class="text-muted">$60+</p>
@@ -29,14 +29,14 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fa fa-4x fa-bookmark wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>FILL</h3>
                     <p class="text-muted">Acrylic - $45+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fa fa-4x fa-eraser wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>REMOVAL</h3>
                     <p class="text-muted"><i>Soft Gel/Hard Gel/Acrylic</i></p>
                     <p class="text-muted">$20+</p>
