--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Prism Nail Studio</h1>
+            <!--<h1>Prism Nail Studio</h1>
             <hr>
             <p>Don't let your dream nails be dreams.</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
         </div>
     </div>
 </header>
