--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ header {
   min-height: auto;
   @include background-cover;
   background-position: center;
-  background-image: url("../img/header_final.png");
+  background-image: url("../img/banner.png");
   opacity: 0.8;
   filter: alpha(opacity=50);
   text-align: left;
