--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,16 +14,15 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-paint-brush wow bounceIn text-primary" ></i>
                     <h3>GEL MANICURE</h3>
-                    <p class="text-muted"><i>No Extension</i></p>
-                    <p class="text-muted">SOFT GEL - $40+</p>
-                    <p class="text-muted">HARD GEL - $45+</p>
+                    <p class="text-muted"><i>Gel overlay on your natural nails, with no extenxion</i></p>
+                    <p class="text-muted">$40+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>FULL SET</h3>
-                    <p class="text-muted"><i>Including Sculpted Acrylic</i></p>
+                    <p class="text-muted"><i>An acrylic system sculpted to your desired length, followed by gel colour application.</i></p>
                     <p class="text-muted">$60+</p>
                 </div>
             </div>
@@ -31,15 +30,16 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-bookmark wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>FILL</h3>
-                    <p class="text-muted">Acrylic - $45+</p>
+                    <p class="text-muted"><i>Colour removal with acrylic/gel fill and reshaping, followed by gel colour application.</i></p>
+                    <p class="text-muted">$50+</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-eraser wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>REMOVAL</h3>
-                    <p class="text-muted"><i>Soft Gel/Hard Gel/Acrylic</i></p>
-                    <p class="text-muted">$20+</p>
+                    <p class="text-muted"><i>Removal of either soft gel, hard gel, or acrylic system.</i></p>
+                    <p class="text-muted">$20</p>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center"><br><br>
-                    <p class="text-muted"><i>Pedicure Coming Soon...</i></p>
+                    <button class="btn btn-primary"><h1><a href="mailto: prismnailstudio@gmail.com"> BOOK NOW </a></h1></button></p>
                 </div>
             </div>
         </div>
