--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,10 +9,13 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-
+        
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="page-scroll" href="#services">Book Now</a></button>
+                </li>
                 <li>
                     <a class="page-scroll" href="#about">About</a>
                 </li>
