--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -10,8 +10,9 @@
   {% include gallery.html%}
   <!--{% include portfolio.html %}-->
   {% include services.html %}
-  {% include call-to-action.html %}
+  {% include about.html %}
   {% include contact.html %}
+  {% include footer.html %}
   {% include scripts.html %}
 </body>
 
