--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -34,6 +34,7 @@ h4,
 h5,
 h6 {
   @include sans-serif-font;
+  margin-top: 10px;
 }
 
 p {
@@ -285,6 +286,11 @@ header {
   }
 }
 
+#footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 // Bootstrap Overrides
 .text-primary {
   color: $theme-primary;
@@ -294,6 +300,33 @@ header {
   padding-right: 0;
   padding-left: 0;
 }
+//Social media styles
+ul.banner-social-buttons {
+  margin-top: 20px;
+}
+
+ul.banner-social-buttons li {
+  margin-bottom: 15px;
+}
+
+@media(max-width:1199px) {
+  ul.banner-social-buttons {
+      margin-top: 15px;
+  }
+}
+
+@media(max-width:767px) {
+  ul.banner-social-buttons li {
+      display: block;
+      margin-bottom: 20px;
+      padding: 0;
+  }
+  ul.banner-social-buttons li:last-child {
+      margin-bottom: 0;
+  }
+}
+
+
 
 // Button Styles
 .btn-default {
@@ -301,6 +334,10 @@ header {
 }
 
 .btn-primary {
+  @include button-variant(white, $theme-primary, $theme-primary);
+}
+
+.btn-primary a {
   @include button-variant(white, $theme-primary, $theme-primary);
 }
 
