--- a/_includes/services.html
+++ b/_includes/services.html
@@ -47,7 +47,7 @@
     <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center"><br><br>
-                    <button class="btn btn-primary"><h1><a href="mailto: prismnailstudio@gmail.com"> BOOK NOW </a></h1></button></p>
+                    <a href="mailto: prismnailstudio@gmail.com" class="btn btn-primary btn-lg btn-xl">BOOK NOW</a></p>
                 </div>
             </div>
         </div>
