--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -303,10 +303,9 @@ header {
 //Social media styles
 ul.banner-social-buttons {
   margin-top: 20px;
-}
-
-ul.banner-social-buttons li {
-  margin-bottom: 15px;
+  li {
+    margin-bottom: 15px;
+  }
 }
 
 @media(max-width:1199px) {
@@ -320,9 +319,9 @@ ul.banner-social-buttons li {
       display: block;
       margin-bottom: 20px;
       padding: 0;
-  }
-  ul.banner-social-buttons li:last-child {
-      margin-bottom: 0;
+      &:last-child {
+        margin-bottom: 0;
+    }
   }
 }
 
@@ -343,20 +342,26 @@ ul.banner-social-buttons li {
 
 .btn {
   @include sans-serif-font;
-  border: none;
   border-radius: 300px;
-  font-weight: 700;
+  font-weight: 400;
   text-transform: uppercase;
+}
+
+.btn-network {
+  border: 1px solid $theme-primary;
+  color: $theme-primary;
+  background-color: transparent;
+  &:hover,
+  .btn-network > fa:hover {
+    color: white;
+    background-color: $theme-primary;
+  }
 }
 
 .btn-xl {
   padding: 15px 30px;
-}
-
-// Contact
-#contact .fa {
-  color: $theme-dark;
-  font-size: 4em;
+  font-weight: 700;
+  font-size: 3em;
 }
 
 // Extras
